a few singleton fixes